--- a/sp500.ipynb
+++ b/sp500.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -68,7 +67,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -77,13 +75,437 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#predictors\n",
+    "news = []\n",
+    "with open('News_Category_Dataset_v3.json', 'r') as file:\n",
+    "    for line in file:\n",
+    "        news.append(json.loads(line))\n",
+    "news = pd.DataFrame.from_dict(news)\n",
+    "\n",
+    "#target\n",
+    "returns = pd.read_csv('SP500.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(209527, 6)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>link</th>\n",
+       "      <th>headline</th>\n",
+       "      <th>category</th>\n",
+       "      <th>short_description</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://www.huffpost.com/entry/covid-boosters-...</td>\n",
+       "      <td>Over 4 Million Americans Roll Up Sleeves For O...</td>\n",
+       "      <td>U.S. NEWS</td>\n",
+       "      <td>Health experts said it is too early to predict...</td>\n",
+       "      <td>Carla K. Johnson, AP</td>\n",
+       "      <td>2022-09-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://www.huffpost.com/entry/american-airlin...</td>\n",
+       "      <td>American Airlines Flyer Charged, Banned For Li...</td>\n",
+       "      <td>U.S. NEWS</td>\n",
+       "      <td>He was subdued by passengers and crew when he ...</td>\n",
+       "      <td>Mary Papenfuss</td>\n",
+       "      <td>2022-09-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>https://www.huffpost.com/entry/funniest-tweets...</td>\n",
+       "      <td>23 Of The Funniest Tweets About Cats And Dogs ...</td>\n",
+       "      <td>COMEDY</td>\n",
+       "      <td>\"Until you have a dog you don't understand wha...</td>\n",
+       "      <td>Elyse Wanshel</td>\n",
+       "      <td>2022-09-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>https://www.huffpost.com/entry/funniest-parent...</td>\n",
+       "      <td>The Funniest Tweets From Parents This Week (Se...</td>\n",
+       "      <td>PARENTING</td>\n",
+       "      <td>\"Accidentally put grown-up toothpaste on my to...</td>\n",
+       "      <td>Caroline Bologna</td>\n",
+       "      <td>2022-09-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>https://www.huffpost.com/entry/amy-cooper-lose...</td>\n",
+       "      <td>Woman Who Called Cops On Black Bird-Watcher Lo...</td>\n",
+       "      <td>U.S. NEWS</td>\n",
+       "      <td>Amy Cooper accused investment firm Franklin Te...</td>\n",
+       "      <td>Nina Golgowski</td>\n",
+       "      <td>2022-09-22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                link  \\\n",
+       "0  https://www.huffpost.com/entry/covid-boosters-...   \n",
+       "1  https://www.huffpost.com/entry/american-airlin...   \n",
+       "2  https://www.huffpost.com/entry/funniest-tweets...   \n",
+       "3  https://www.huffpost.com/entry/funniest-parent...   \n",
+       "4  https://www.huffpost.com/entry/amy-cooper-lose...   \n",
+       "\n",
+       "                                            headline   category  \\\n",
+       "0  Over 4 Million Americans Roll Up Sleeves For O...  U.S. NEWS   \n",
+       "1  American Airlines Flyer Charged, Banned For Li...  U.S. NEWS   \n",
+       "2  23 Of The Funniest Tweets About Cats And Dogs ...     COMEDY   \n",
+       "3  The Funniest Tweets From Parents This Week (Se...  PARENTING   \n",
+       "4  Woman Who Called Cops On Black Bird-Watcher Lo...  U.S. NEWS   \n",
+       "\n",
+       "                                   short_description               authors  \\\n",
+       "0  Health experts said it is too early to predict...  Carla K. Johnson, AP   \n",
+       "1  He was subdued by passengers and crew when he ...        Mary Papenfuss   \n",
+       "2  \"Until you have a dog you don't understand wha...         Elyse Wanshel   \n",
+       "3  \"Accidentally put grown-up toothpaste on my to...      Caroline Bologna   \n",
+       "4  Amy Cooper accused investment firm Franklin Te...        Nina Golgowski   \n",
+       "\n",
+       "         date  \n",
+       "0  2022-09-23  \n",
+       "1  2022-09-23  \n",
+       "2  2022-09-23  \n",
+       "3  2022-09-23  \n",
+       "4  2022-09-22  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>link</th>\n",
+       "      <th>headline</th>\n",
+       "      <th>category</th>\n",
+       "      <th>short_description</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>209527</td>\n",
+       "      <td>209527</td>\n",
+       "      <td>209527</td>\n",
+       "      <td>209527</td>\n",
+       "      <td>209527</td>\n",
+       "      <td>209527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>209486</td>\n",
+       "      <td>207996</td>\n",
+       "      <td>42</td>\n",
+       "      <td>187022</td>\n",
+       "      <td>29169</td>\n",
+       "      <td>3890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>https://www.huffingtonpost.comhttps://www.wash...</td>\n",
+       "      <td>Sunday Roundup</td>\n",
+       "      <td>POLITICS</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>2014-03-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>2</td>\n",
+       "      <td>90</td>\n",
+       "      <td>35602</td>\n",
+       "      <td>19712</td>\n",
+       "      <td>37418</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     link        headline  \\\n",
+       "count                                              209527          209527   \n",
+       "unique                                             209486          207996   \n",
+       "top     https://www.huffingtonpost.comhttps://www.wash...  Sunday Roundup   \n",
+       "freq                                                    2              90   \n",
+       "\n",
+       "        category short_description authors        date  \n",
+       "count     209527            209527  209527      209527  \n",
+       "unique        42            187022   29169        3890  \n",
+       "top     POLITICS                            2014-03-25  \n",
+       "freq       35602             19712   37418         100  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "link                 object\n",
+       "headline             object\n",
+       "category             object\n",
+       "short_description    object\n",
+       "authors              object\n",
+       "date                 object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2608, 2)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>SP500</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-06-27</td>\n",
+       "      <td>1613.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-06-28</td>\n",
+       "      <td>1606.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-07-01</td>\n",
+       "      <td>1614.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-07-02</td>\n",
+       "      <td>1614.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-07-03</td>\n",
+       "      <td>1615.41</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         DATE    SP500\n",
+       "0  2013-06-27  1613.20\n",
+       "1  2013-06-28  1606.28\n",
+       "2  2013-07-01  1614.96\n",
+       "3  2013-07-02  1614.08\n",
+       "4  2013-07-03  1615.41"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>SP500</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2608</td>\n",
+       "      <td>2608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>2608</td>\n",
+       "      <td>2504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>2013-06-27</td>\n",
+       "      <td>.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>1</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              DATE SP500\n",
+       "count         2608  2608\n",
+       "unique        2608  2504\n",
+       "top     2013-06-27     .\n",
+       "freq             1    92"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DATE     object\n",
+       "SP500    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "news.shape\n",
+    "news.head()\n",
+    "news.describe()\n",
+    "news.dtypes\n",
+    "\n",
+    "returns.shape\n",
+    "returns.head()\n",
+    "returns.describe()\n",
+    "returns.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Making a decision to drop authors as a predictor because vectorization/embedding of a name as a text feature using the methods described in the introduction does not make sense to use as a feature. Authors write on certain topics and do not work indefinitely for the company, there is a co-effect or colinearity between category and author so to reduce multicollinearity right away."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = news[['date', 'link', ]]\n",
+    "\n",
+    "#trim redundancies off the link strings"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -109,7 +531,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -135,7 +556,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -161,7 +581,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -215,10 +634,23 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
