--- a/sp500.ipynb
+++ b/sp500.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -49,7 +49,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -68,7 +68,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -87,7 +87,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,8 +103,9 @@
     "\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.linear_model import LogisticRegressionCV, ElasticNetCV\n",
+    "from sklearn.linear_model import LinearRegression, ElasticNetCV, SGDRegressor\n",
     "\n",
+    "import autokeras as ak\n",
     "\n",
     "import nltk\n",
     "from nltk import word_tokenize\n",
@@ -2706,7 +2707,9 @@
     "df_training = df_train.sample(frac=0.80)\n",
     "df_val = df_train.drop(df_training.index)\n",
     "\n",
+    "df_training.shape\n",
     "df_training.head()\n",
+    "df_val.shape\n",
     "df_val.head()"
    ]
   },
@@ -3414,7 +3417,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#logistic regression - using a cross validation regressor for a warm start"
+    "#linear regression\n",
+    "\n",
+    "reg = LinearRegression()\n",
+    "# reg.fit(X_train, y_train)\n",
+    "\n",
+    "reg.fit(X_val, y_val)\n",
+    "\n",
+    "reg.score(X_test, y_test)\n"
    ]
   },
   {
@@ -3423,7 +3433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#random forest regression - using a cross validation regressor for a warm start"
+    "#Stochastic Gradient Descent regression"
    ]
   },
   {
@@ -3432,7 +3442,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#autokeras"
+    "#autokeras - purely experimental, trying an OOB text regressor\n",
+    "\n",
+    "reg = ak.TextRegressor(overwrite=True, max_trials=10)\n",
+    "reg.fit(X_val, y_val, epochs=5)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#DNN"
    ]
   },
   {
@@ -3442,15 +3465,6 @@
    "outputs": [],
    "source": [
     "#1D CNN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#LSTM"
    ]
   }
  ],
