--- a/sp500.ipynb
+++ b/sp500.ipynb
@@ -12,86 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\alxra\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\alxra\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\alxra\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package omw-1.4 to\n",
-      "[nltk_data]     C:\\Users\\alxra\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#resources\n",
     "\n",
@@ -106,6 +29,7 @@
     "from sklearn.linear_model import LinearRegression, ElasticNetCV, SGDRegressor\n",
     "\n",
     "import autokeras as ak\n",
+    "import tensorflow as tf\n",
     "\n",
     "import nltk\n",
     "from nltk import word_tokenize\n",
@@ -3479,42 +3403,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trial 5 Complete [00h 00m 28s]\n",
+      "val_loss: 186560.96875\n",
+      "\n",
+      "Best val_loss So Far: 132005.59375\n",
+      "Total elapsed time: 00h 02m 24s\n",
+      "INFO:tensorflow:Oracle triggered exit\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Oracle triggered exit\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "297/297 [==============================] - 8s 23ms/step - loss: 1062716.2500 - mean_squared_error: 1062716.2500 - accuracy: 0.0000e+00\n",
+      "Epoch 2/5\n",
+      "297/297 [==============================] - 7s 24ms/step - loss: 519751.4375 - mean_squared_error: 519751.4375 - accuracy: 0.0000e+00\n",
+      "Epoch 3/5\n",
+      "297/297 [==============================] - 8s 26ms/step - loss: 465490.2188 - mean_squared_error: 465490.2188 - accuracy: 0.0000e+00\n",
+      "Epoch 4/5\n",
+      "297/297 [==============================] - 7s 23ms/step - loss: 438445.9375 - mean_squared_error: 438445.9375 - accuracy: 0.0000e+00\n",
+      "Epoch 5/5\n",
+      "297/297 [==============================] - 7s 23ms/step - loss: 413521.1250 - mean_squared_error: 413521.1250 - accuracy: 0.0000e+00\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 4 of 4). These functions will not be directly callable after loading.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: .\\trainset_test\\best_model\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: .\\trainset_test\\best_model\\assets\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x2579a9ff010>"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "743/743 [==============================] - 2s 3ms/step - loss: 139907.1094 - mean_squared_error: 139907.1094 - accuracy: 0.0000e+00\n",
+      "[139907.109375, 139907.109375, 0.0]\n"
+     ]
+    }
+   ],
    "source": [
-    "#autokeras - purely experimental, trying an OOB text regressor\n",
+    "#autokeras -trying an OOB search btw 5 text regressor architectures by Keras\n",
     "\n",
-    "reg = ak.TextRegressor(overwrite=True, max_trials=10)\n",
-    "reg.fit(X_val, y_val, epochs=5, shuffle=True, validation_split=0.1)\n",
-    "# reg.fit(X_train, y_train, batch_size=32, epochs=5, shuffle=True, validation_split=0.1)\n",
-    "\n"
+    "reg = ak.TextRegressor(project_name='trainset_test', overwrite=True, max_trials=5, metrics=['mean_squared_error',\n",
+    "                                                                                            'accuracy'])\n",
+    "reg.fit(df_val['corpus'].to_numpy(), y_val, epochs=5, shuffle=True, validation_split=0.1)\n",
+    "\n",
+    "print(reg.evaluate(df_test['corpus'].to_numpy(), y_test))\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#DNN"
+    "training loss is much larger than validation loss, indicating that training is insufficient to generalize well while predicting on unseen data. these models are computationally expensive, I would re-run these on GPU if using AutoKeras again. I also can't recover the assets file that contains the plain text description of the best model from the trials - when using conda+jupyter, the files saved by AutoKeras are not utf-8 encoded and thus have saving disabled.\n",
+    "\n",
+    "Not an improvement over the SDG regressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "268/268 [==============================] - 14s 49ms/step - loss: 1054927.5000 - accuracy: 0.0000e+00 - val_loss: 152292.6875 - val_accuracy: 0.0000e+00\n",
+      "Epoch 2/3\n",
+      "268/268 [==============================] - 13s 48ms/step - loss: 167652.4531 - accuracy: 0.0000e+00 - val_loss: 142208.4531 - val_accuracy: 0.0000e+00\n",
+      "Epoch 3/3\n",
+      "268/268 [==============================] - 13s 48ms/step - loss: 134390.8125 - accuracy: 0.0000e+00 - val_loss: 151755.6250 - val_accuracy: 0.0000e+00\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'loss': [1054927.5, 167652.453125, 134390.8125],\n",
+       " 'accuracy': [0.0, 0.0, 0.0],\n",
+       " 'val_loss': [152292.6875, 142208.453125, 151755.625],\n",
+       " 'val_accuracy': [0.0, 0.0, 0.0]}"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#1D CNN"
+    "#DNN\n",
+    "\n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Dense(512, activation='relu'),\n",
+    "    tf.keras.layers.Dropout(0.6),\n",
+    "    tf.keras.layers.Dense(256, activation='relu'),\n",
+    "    tf.keras.layers.Dropout(0.4),\n",
+    "    tf.keras.layers.Dense(128, activation='relu'),\n",
+    "    tf.keras.layers.Dropout(0.2),\n",
+    "    tf.keras.layers.Dense(64, activation='relu'),\n",
+    "    tf.keras.layers.Dense(1)\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer='Adam', loss='mean_squared_error', metrics=['accuracy'])\n",
+    "\n",
+    "#train and store history\n",
+    "History = model.fit(x=X_val, y=y_val, epochs=3, validation_split=0.1, shuffle=True, verbose=1)\n",
+    "History.history\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using a very dense network that is regularized is an improvement over the AutoKeras neural network in terms of training and validation losses.\n",
+    "\n",
+    "With more time, this is something I would train into the ground to minimize loss and definitely experiment with the funnel architecture and testing initializers to speed up training."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "743/743 [==============================] - 9s 12ms/step - loss: 160175.5469 - accuracy: 0.0000e+00\n"
+     ]
+    }
+   ],
+   "source": [
+    "#evaluate model\n",
+    "modeleval = model.evaluate(X_test, y_test, verbose=1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test loss is higher with the current DNN architecture compared to autokeras but not by much. This DNN is a much simpler architecture and required less training"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3522,9 +3592,15 @@
    "source": [
     "# Summary\n",
     "\n",
+    "Based on these experiments, complex models such as neural networks are necessary in predicting S&P500 returns from Huff Post News text data. AutoKeras may be an option as it does not require as much data preprocessing and can run tens of hundreds of experiments while tracking without user intervention. Tensorflow and Keras may be a strong contender since customization of the layers allows for fine-tuned training and regularization.\n",
+    "\n",
+    "\n",
+    "Simpler regression models such as ElasticNet can predict returns from date part news data, however the drop in test coefficient of determination suggests that this model may not generalize well.\n",
+    "\n",
+    "A more advanced regression model such as SDG does show promise as a returns predictor using text data input if a larger training set and more epochs are employed.\n",
+    "\n",
     "* Huff Post News Category alone cannot predict S&P\n",
     "* Year of news publication is highly correlated with S&P returns, and using the date parts as features for a linear regression (regularized) may be a useful predictive tool given Huff Post data.\n",
-    "* Simple regressors such as OLS linear and SDG are not suitable for text corpus feature-based prediction \n",
     "\n",
     "\n",
     "## Limitations\n",
@@ -3534,7 +3610,9 @@
     "\n",
     "## Future Work\n",
     "\n",
-    "If and when the memory bottleneck is no longer an issue, I would like to collect more data from different news sources to reduce bias. I would further experiment with n-gram size, since increasing the n-gram size posed memory issue. Given that the training corpus would increase with more news sources, I would propose using word2vec or BERT embeddings instead of TF-IDF to handle the larger dimensionality and most likely better train complex networks, which for this NLP task are necessary compared to simple regressors\n",
+    "I would like to collect more data from different news sources to reduce bias. I would further experiment with n-gram size, since increasing the n-gram size posed memory issue. Given that the training corpus would increase with more news sources, I would propose using word2vec or BERT embeddings instead of TF-IDF to handle the larger dimensionality and most likely better train complex networks, which for this NLP task are necessary compared to simple regressors.\n",
+    "\n",
+    "I would experiment more with the custom neural network architecture, adding LSTM or 1-D CNN layers and trying different layer activations. In the background I would run a larger AutoKeras experiment but would not use this over a custom architecture for production since I do not have all the metadata on the underlying model.\n",
     "\n",
     "\n",
     "## Final Thoughts\n",
